--- a/talend.project
+++ b/talend.project
@@ -7,6 +7,103 @@
     <documentationStatus xmi:id="_EphyoPQWEeq_JYjfJORv2w" label="unchecked" code="UCK"/>
     <documentationStatus xmi:id="_EphyofQWEeq_JYjfJORv2w" label="checked" code="CHK"/>
     <documentationStatus xmi:id="_EphyovQWEeq_JYjfJORv2w" label="validated" code="VAL"/>
+    <statAndLogsSettings xmi:id="_OtSWkPQWEeq_JYjfJORv2w">
+      <parameters xmi:id="_OtSWkfQWEeq_JYjfJORv2w">
+        <elementParameter xmi:id="_Ovof8PQWEeq_JYjfJORv2w" field="CHECK" name="UPDATE_COMPONENTS" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHAPQWEeq_JYjfJORv2w" field="CHECK" name="STATS_DEFAULT_PROJECTSETTING" value="true" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHAfQWEeq_JYjfJORv2w" field="CHECK" name="ON_STATCATCHER_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHAvQWEeq_JYjfJORv2w" field="CHECK" name="ON_LOGCATCHER_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHA_QWEeq_JYjfJORv2w" field="CHECK" name="ON_METERCATCHER_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHBPQWEeq_JYjfJORv2w" field="CHECK" name="ON_CONSOLE_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHBfQWEeq_JYjfJORv2w" field="CHECK" name="ON_FILES_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHBvQWEeq_JYjfJORv2w" field="DIRECTORY" name="FILE_PATH" value="&quot;C:/Users/Ben-Sturgess/workspace/.metadata&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHB_QWEeq_JYjfJORv2w" field="TEXT" name="FILENAME_STATS" value="&quot;stats_file.txt&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHCPQWEeq_JYjfJORv2w" field="TEXT" name="FILENAME_LOGS" value="&quot;logs_file.txt&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHCfQWEeq_JYjfJORv2w" field="TEXT" name="FILENAME_METTER" value="&quot;meter_file.txt&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHCvQWEeq_JYjfJORv2w" field="ENCODING_TYPE" name="ENCODING" value="ISO-8859-15" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHC_QWEeq_JYjfJORv2w" field="CHECK" name="ON_DATABASE_FLAG" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHDPQWEeq_JYjfJORv2w" field="PROPERTY_TYPE" name="PROPERTY_TYPE" value="" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHDfQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="DB_TYPE" value="tJDBCOutput" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHDvQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="DB_VERSION" value="ORACLE_11" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHD_QWEeq_JYjfJORv2w" field="TEXT" name="URL" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHEPQWEeq_JYjfJORv2w" field="TABLE" name="DRIVER_JAR" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHEfQWEeq_JYjfJORv2w" field="TEXT" name="DRIVER_CLASS" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHEvQWEeq_JYjfJORv2w" field="TEXT" name="HOST" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHE_QWEeq_JYjfJORv2w" field="TEXT" name="PORT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHFPQWEeq_JYjfJORv2w" field="TEXT" name="DBNAME" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpHFfQWEeq_JYjfJORv2w" field="TEXT" name="LOCAL_SERVICE_NAME" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuEPQWEeq_JYjfJORv2w" field="TEXT" name="PROPERTIES" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuEfQWEeq_JYjfJORv2w" field="TEXT" name="SCHEMA_DB" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuEvQWEeq_JYjfJORv2w" field="TEXT" name="USER" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuE_QWEeq_JYjfJORv2w" field="PASSWORD" name="PASS" value="0RMsyjmybrE=" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuFPQWEeq_JYjfJORv2w" field="FILE" name="DBFILE" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuFfQWEeq_JYjfJORv2w" field="DBTABLE" name="TABLE_STATS" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuFvQWEeq_JYjfJORv2w" field="DBTABLE" name="TABLE_LOGS" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuF_QWEeq_JYjfJORv2w" field="DBTABLE" name="TABLE_METER" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuGPQWEeq_JYjfJORv2w" field="CHECK" name="CATCH_RUNTIME_ERRORS" value="true" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuGfQWEeq_JYjfJORv2w" field="CHECK" name="CATCH_USER_ERRORS" value="true" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuGvQWEeq_JYjfJORv2w" field="CHECK" name="CATCH_USER_WARNING" value="true" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuG_QWEeq_JYjfJORv2w" field="CHECK" name="CATCH_REALTIME_STATS" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuHPQWEeq_JYjfJORv2w" field="TECHNICAL" name="ENCODING:ENCODING_TYPE" value="ISO-8859-15" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuHfQWEeq_JYjfJORv2w" field="TECHNICAL" name="PROPERTY_TYPE:PROPERTY_TYPE" value="BUILT_IN" contextMode="false"/>
+        <elementParameter xmi:id="_OvpuHvQWEeq_JYjfJORv2w" field="TECHNICAL" name="PROPERTY_TYPE:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
+      </parameters>
+    </statAndLogsSettings>
+    <implicitContextSettings xmi:id="_OvpuH_QWEeq_JYjfJORv2w">
+      <parameters xmi:id="_OvpuIPQWEeq_JYjfJORv2w">
+        <elementParameter xmi:id="_Ov9QEPQWEeq_JYjfJORv2w" field="CHECK" name="UPDATE_COMPONENTS" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QEfQWEeq_JYjfJORv2w" field="CHECK" name="IMPLICIT_TCONTEXTLOAD" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QEvQWEeq_JYjfJORv2w" field="CHECK" name="IMPLICT_DEFAULT_PROJECTSETTING" value="true" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QE_QWEeq_JYjfJORv2w" field="RADIO" name="FROM_FILE_FLAG_IMPLICIT_CONTEXT" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QFPQWEeq_JYjfJORv2w" field="RADIO" name="FROM_DATABASE_FLAG_IMPLICIT_CONTEXT" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QFfQWEeq_JYjfJORv2w" field="FILE" name="IMPLICIT_TCONTEXTLOAD_FILE" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QFvQWEeq_JYjfJORv2w" field="TEXT" name="FIELDSEPARATOR" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QF_QWEeq_JYjfJORv2w" field="PROPERTY_TYPE" name="PROPERTY_TYPE_IMPLICIT_CONTEXT" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QGPQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="DB_TYPE_IMPLICIT_CONTEXT" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QGfQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="DB_VERSION_IMPLICIT_CONTEXT" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QGvQWEeq_JYjfJORv2w" field="TEXT" name="URL_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QG_QWEeq_JYjfJORv2w" field="TABLE" name="DRIVER_JAR_IMPLICIT_CONTEXT" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QHPQWEeq_JYjfJORv2w" field="TEXT" name="DRIVER_CLASS_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QHfQWEeq_JYjfJORv2w" field="TEXT" name="HOST_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QHvQWEeq_JYjfJORv2w" field="TEXT" name="PORT_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QH_QWEeq_JYjfJORv2w" field="TEXT" name="DBNAME_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QIPQWEeq_JYjfJORv2w" field="TEXT" name="LOCAL_SERVICE_NAME_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QIfQWEeq_JYjfJORv2w" field="TEXT" name="PROPERTIES_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QIvQWEeq_JYjfJORv2w" field="TEXT" name="SCHEMA_DB_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov9QI_QWEeq_JYjfJORv2w" field="TEXT" name="USER_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93IPQWEeq_JYjfJORv2w" field="PASSWORD" name="PASS_IMPLICIT_CONTEXT" value="0RMsyjmybrE=" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93IfQWEeq_JYjfJORv2w" field="FILE" name="DBFILE_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93IvQWEeq_JYjfJORv2w" field="DBTABLE" name="DBTABLE_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93I_QWEeq_JYjfJORv2w" field="TEXT" name="QUERY_CONDITION_IMPLICIT_CONTEXT" value="&quot;&quot;" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93JPQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="LOAD_NEW_VARIABLE" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93JfQWEeq_JYjfJORv2w" field="CLOSED_LIST" name="NOT_LOAD_OLD_VARIABLE" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93JvQWEeq_JYjfJORv2w" field="CHECK" name="PRINT_OPERATIONS" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93J_QWEeq_JYjfJORv2w" field="CHECK" name="DISABLE_ERROR" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93KPQWEeq_JYjfJORv2w" field="CHECK" name="DISABLE_WARNINGS" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93KfQWEeq_JYjfJORv2w" field="CHECK" name="DISABLE_INFO" value="false" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93KvQWEeq_JYjfJORv2w" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:PROPERTY_TYPE" value="" contextMode="false"/>
+        <elementParameter xmi:id="_Ov93K_QWEeq_JYjfJORv2w" field="TECHNICAL" name="PROPERTY_TYPE_IMPLICIT_CONTEXT:REPOSITORY_PROPERTY_TYPE" value="" contextMode="false"/>
+      </parameters>
+    </implicitContextSettings>
+    <ItemsRelations xmi:id="_bWMiYPQXEeq_JYjfJORv2w">
+      <baseItem xmi:id="_bWNJcPQXEeq_JYjfJORv2w" id="_Pyrb4PQXEeq_JYjfJORv2w" version="0.1" type="job"/>
+      <relatedItems xmi:id="_bWNJcfQXEeq_JYjfJORv2w" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJcvQXEeq_JYjfJORv2w" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJc_QXEeq_JYjfJORv2w" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJdPQXEeq_JYjfJORv2w" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJdfQXEeq_JYjfJORv2w" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJdvQXEeq_JYjfJORv2w" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJd_QXEeq_JYjfJORv2w" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJePQXEeq_JYjfJORv2w" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJefQXEeq_JYjfJORv2w" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJevQXEeq_JYjfJORv2w" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJe_QXEeq_JYjfJORv2w" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJfPQXEeq_JYjfJORv2w" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJffQXEeq_JYjfJORv2w" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJfvQXEeq_JYjfJORv2w" id="MDM" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJf_QXEeq_JYjfJORv2w" id="TalendStringUtil" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_bWNJgPQXEeq_JYjfJORv2w" id="DataQualityDependencies" version="Latest" type="routine"/>
+    </ItemsRelations>
     <migrationTask xmi:id="_DMa7cPQWEeq_JYjfJORv2w" id="org.talend.designer.maven.ui.ConfigMavenRepositoryRemove" breaks="6.0.1" version="6.0.2" status="ok"/>
     <migrationTask xmi:id="_DMa7cfQWEeq_JYjfJORv2w" id="org.talend.mdm.repository.core.migrate.UpdateViewObjectPathMT" breaks="5.1.1" version="5.1.2" status="ok"/>
     <migrationTask xmi:id="_DMa7cvQWEeq_JYjfJORv2w" id="org.talend.mdm.repository.core.migrate.UpdateProcessObjectPathMT" breaks="5.1.1" version="5.1.2" status="ok"/>
